--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "python-decouple>=3.8",
     "psycopg2>=2.9.6",
     "bcrypt>=4.0.1",
+    "pyjwt>=2.8.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-jose[cryptography]>=3.3.0",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
