--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pyjwt>=2.8.0",
     "passlib[bcrypt]>=1.7.4",
     "python-jose[cryptography]>=3.3.0",
+    "confluent-kafka>=2.2.0",
 ]
 requires-python = ">=3.10"
 license = {text = "MIT"}
